[Qalculate] Fix bug with terminal colour symobls in command results

BUG: 430055
FIXED-IN: 20.12.1